# shuttle-examples

axum/openai/: Cargo.toml
axum/openai/frontend/: next.config.ts  tsconfig.json
axum/openai/frontend/app/: page.tsx
axum/openai/frontend/app/app/: page.tsx
axum/openai/frontend/components/: ChatMessage.tsx  ConversationButton.tsx
axum/openai/src/: main.rs
axum/openai/src/endpoints/: openai.rs
